# nrf54h20dk

./: .gitignore  CMakeLists.txt  Makefile  README.md
scripts/: motd
src/: CMakeLists.txt  main.c  prj.conf
